--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
+    useLibrary  'org.apache.http.legacy'
+
     defaultConfig {
         applicationId "com.example.hotel_reservation_system"
         minSdkVersion 16
