--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.7.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
-
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 
